Fix search results overflowing container by explicitly setting width

--- a/web-client/src/app/search/search.component.scss
+++ b/web-client/src/app/search/search.component.scss
@@ -13,3 +13,15 @@
     color: white;
   }
 }
+
+.search-result-container {
+  $icon-width: 40px;
+
+  .icon-pane {
+    width: $icon-width;
+  }
+
+  .text-pane {
+    width: calc(100% - #{$icon-width});
+  }
+}
